# wavetracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
cmake/: create_source_groups.cmake  ignore_precompiled_header.cmake  set_precompiled_header.cmake  set_startup_project.cmake  set_target_output_directories.cmake  update_submodules.cmake
src/: CMakeLists.txt  main.cpp
src/math/: math.h
src/objects/: camera.cpp  camera.h  ray.cpp  ray.h
src/pch/: wavepch.cpp  wavepch.h
src/ray/: ray.cpp  ray.h
src/util/: logger.cpp  logger.h  util.h
src/util/logger/: logger.cpp
